# zeta-guard-ngx-pep

./: .dockerignore  .env  .envrc  .gitignore  .gitlab-ci.yml  .trivyignore  Cargo.toml  Dockerfile  README.md  ReleaseNotes.md  build.rs  keys  sonar-project.properties  vulnerabilites.openvex.json
.cargo/: config.toml
.config/: nextest.toml
book/: book.toml
book/src/: SUMMARY.md
book/src/errors/: AccessToken.md  AccessTokenInvalid.md  DPoP.md  ImpossibleTravel.md  Internal.md  PoPP.md  PoPPInvalidActor.md  PoPPMissing.md  index.md
docker/: nginx.conf
hsm_proto/: hsm-proxy.proto
hsm_proto/google/: README
hsm_sim/: Cargo.toml  README.md
hsm_sim/keys/: .gitignore  ca.crt  ca.key
hsm_sim/src/: lib.rs  main.rs  tests.rs
hsm_sim/tests/: asymmetric.rs  encrypt_decrypt.rs  healthcheck.rs
hsm_sim/tests/common/: mod.rs
libasl/: Cargo.toml  README.md
libasl/fixtures/: README.md  ca1_by_ca2_cert.pem  ca1_cert.pem  ca1_csr.pem  ca1_key.pem  ca2_by_ca1_cert.pem  ca2_by_ca3_cert.pem  ca2_cert.pem  ca2_csr.pem  ca2_key.pem  ca3_by_ca2_cert.pem  ca3_cert.pem  ca3_csr.pem  ca3_key.pem  cross_extension.cfg  issuer_cert.pem  issuer_csr.pem  issuer_key.pem  issuer_self_cert.pem  no_chain.json  no_roots.json  ocsp_extension.cfg  ocsp_request.der  plain.txt  roots.json  signer_cert.pem  signer_csr.pem  signer_key.pem  signer_self_cert.pem
libasl/src/: cache.rs  client.rs  keys.rs  lib.rs  model.rs  roots.rs  server.rs  util.rs
libasl/tests/: integration.rs
misc/: cargo-build  cargo-env  cov-env  nginx.conf.tpl  popp-token-Server-Sim-nist-komp61.p12
misc/config/: asl.conf  common.conf  server_common.conf
misc/docker/: default.conf  nginx.conf  openssl.cnf
ossl_hsm/: .gititgnore  CLAUDE.md  Cargo.toml  build.rs  openssl.cnf
ossl_hsm/src/: grpc_client.rs  hsm_ec.rs  hsm_store.rs  lib.rs
ossl_hsm/tests/: provider.rs
prefix/: .gitignore
prefix/conf/: asl.p256.pem  tls.p256.pem
prefix/html/: doc  jwks.json  openid-federation.txt  signed-jwks.txt
prefix/modules/debug/: libngx_pep.dylib
prefix/modules/release/: libngx_pep.dylib
purl/: Cargo.toml  build.rs
purl/src/: main.rs
site/: .env.tpl  esbuild.mjs  package-lock.json  package.json
site/public/: index.html
site/public/secret/: data.json
site/src/: env.d.ts  main.ts
src/: access_token.rs  asl.rs  asl_keys.rs  buffer.rs  conf.rs  error.rs  headers.rs  jwk_cache.rs  lib.rs  ocsp_cache.rs  ossl_store.rs  pep.rs  request_body.rs  request_ops.rs  response.rs  session_cache.rs  stubs.rs  tests.rs
src/client/: asl.rs  asn1.rs  ec-private.pem  mod.rs
src/its/: mod.rs
src/schema/: access-token.yaml  client-assertion-jwt.yaml  client-instance.yaml
src/tests/: mod.rs  stubs.rs
tests/: it.rs
tests/common/: echo.rs  mod.rs  ocsp.rs
xtask/: Cargo.toml
xtask/src/: main.rs
