# #%L
# ngx_pep
# %%
# (C) akquinet tech@Spree GmbH, 2025, licensed for gematik GmbH
# %%
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# *******
#
# For additional notes and disclaimer from gematik and in case of changes by gematik find details in the "Readme" file.
# #L%
[package]
name = "ngx_pep"
version = "0.2.5"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91.1"

[features]
default = ["devel"]
devel = [
  # purl dependencies
  "tokio/rt-multi-thread",
  "dep:argp",
  "dep:p256",
  "dep:uuid",
  "dep:p12-keystore",
  "dep:openssl",
  "dep:indicatif",
]

[dependencies]
anyhow = "1.0"
async-compat = "0.2"
scc = "3.3"
base64ct = "1.8"
futures = "0.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
nginx-sys = { version = "0.5", features = ["vendored"] }
ngx = { version = "0.5", features = ["vendored", "async"] } # async: only needed for nginx sleep, spawn from ngx-tickle
ngx-tickle = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "blocking",
  "json",
  "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
asl = { path = "./libasl" }
tokio = { version = "1.48", features = ["macros", "fs", "rt"] }
libc = "0.2"
hex = "0.4"
serde_cbor = "0.11"
sha2 = "0.10"
httparse = "1.10"
http = "1.4"
fastrand = "2.3"
argp = {version = "0.4", optional = true }
p256 = {version = "0.13", optional = true }
uuid = {version = "1.18", optional = true }
p12-keystore = {version = "0.2", optional = true}
openssl = {version = "0.10", optional = true }
indicatif = {version = "0.18", optional = true }

[dev-dependencies]
mockall = "0.13"
rstest = "0.26"
serial_test = "3"
ambassador = "0.4"

[build-dependencies]
cc = { version = "1.0", optional = true }
anyhow = "1.0"
cargo_metadata = "0.23"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
typify = "0.5"
schemars = "0.8"
prettyplease = "0.2"
syn = "2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
