# #%L
# ngx_pep
# %%
# (C) tech@Spree GmbH, 2026, licensed for gematik GmbH
# %%
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# *******
#
# For additional notes and disclaimer from gematik and in case of changes by gematik find details in the "Readme" file.
# #L%
[package]
name = "ngx_pep"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[workspace]
members = [
  ".",
  "purl",
  "libasl",
  "hsm_sim",
  "ossl_hsm",
]
exclude = ["xtask"]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94.0"

[features]
default = []
stubs = []
client = [
  "stubs",
  "dep:uuid",
  "dep:p12-keystore",
  "dep:openssl",
  "dep:p256",
  "dep:asn1-rs",
  "dep:hyper",
  "dep:http-body-util",
  "dep:hyper-util",
  "tokio/rt-multi-thread",
  "tokio/process",
]
# for integration tests
its = [
  "dep:tarpc",
  "dep:tokio-serde",
]

[dependencies]
anyhow = "1.0"
async-compat = "0.2"
scc = "3.3"
base64ct = {  version = "1.8", features = ["alloc"] }
futures = "0.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
nginx-sys = { version = "0.5", default-features = false }
ngx = { version = "0.5", features = ["async"] } # async: only needed for nginx sleep, spawn from ngx-tickle
ngx-tickle = { version = "0.2" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "blocking",
  "json",
  "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
thiserror = "2.0"
asl = { path = "./libasl" }
tokio = { version = "1.48", features = ["macros", "fs", "rt"] }
libc = "0.2"
hex = "0.4"
sha2 = "0.10"
httparse = "1.10"
http = "1.4"
fastrand = "2.3"
x509-parser = "0.18"
x509-cert = "0.2"
x509-ocsp = "0.2"
sha1_smol = "1.0" # for OCSP CertId only
der = "0.7"
sec1 = { version = "0.7", features = ["pkcs8"] }
asn1-rs = { version= "0.7", optional = true }
uuid = { version = "1.18", optional = true }
p12-keystore = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
p256 = { version = "0.13", optional = true }
hyper = { version = "1", features = ["full"], optional = true}
http-body-util = {version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true}
strum = { version = "0.28", features = ["derive"] }
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "unix", "serde1"], optional = true }
tokio-serde = { version = "0.9", features = ["json"], optional = true }

[dev-dependencies]
mockall = "0.14"
rstest = "0.26"
serial_test = "3"
ambassador = "0.5"
ngx_pep = { path = ".", features = ["client", "its"] }
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "unix", "serde1"] }
tokio-serde = { version = "0.9", features = ["json"] }
hsm_sim = { path = "./hsm_sim/" }
openssl = "0.10"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
const-oid = "0.9"

[build-dependencies]
cc = { version = "1.0", optional = true }
anyhow = "1.0"
tinytemplate = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
typify = "0.5"
schemars = "0.8"
prettyplease = "0.2"
syn = "2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "it"
required-features = ["client"]

[profile.release]
debug = true
