[package]
name = "hsm_sim"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "hsm_sim"
path = "src/lib.rs"

[[bin]]
name = "hsm_sim"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
anyhow = "1"
openssl = "0.10"
tempfile = "3"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"
