[package]
name = "ossl_hsm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl_provider_forge = "0.9"
openssl = "0.10"
libc = "0.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
hsm_sim = { path = "../hsm_sim" }
openssl = "0.10"
openssl-sys = "0.9"
foreign-types-shared = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = "0.1"
tonic = "0.14"
tempfile = "3"
anyhow = "1"

[build-dependencies]
tonic-prost-build = "0.14"
