# #%L
# ngx_pep
# %%
# (C) tech@Spree GmbH, 2026, licensed for gematik GmbH
# %%
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# *******
#
# For additional notes and disclaimer from gematik and in case of changes by gematik find details in the "Readme" file.
# #L%
[package]
name = "purl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
ngx_pep = { path = "..", features = ["client"] }
argp = "0.4"
indicatif = "0.18"
p256 = "*"
base64ct = "*"
futures = "*"
hex = "*"
http = "*"
httparse = "*"
reqwest = "*"
serde = "*"
serde_json = "*"
sha2 = "*"
tokio = { version = "*", features = ["macros", "fs", "rt", "rt-multi-thread", "process"] }
asl = { path = "../libasl" }

[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
typify = "0.5"
schemars = "0.8"
prettyplease = "0.2"
syn = "2.0"
